--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 # Change file for Plack::Middleware::TemplateToolkit
 
+0.2
+    Fixed but with vars as singletons
+    Modified and documented tt.path, tt.template, tt.vars
+    Added Plack::Middleware::Debug::TemplateToolkit
+    New parameter request_vars to inject request variables
+    Modified utf8 parameter
+
 0.15
     Warn on deprecated accessors
 	Introduced $env->{'tt.template'}
